pihole-cft.yml
Parameters:
  sshKey:
    Description: EC2 keypair for SSH access
    Type: String
  awsRegion:
    Description: Region for the stack to sit in
    Type: String
    Default: 'us-east-2a'
Resources:
  PiholeInstance:
    Type : 'AWS::EC2::Instance'
    Properties:
      SecurityGroups:
        - !Ref PiholeSecurityGroup
      KeyName: !Ref sshKey
      ImageId: ami-00399ec92321828f5
      InstanceType: t2.micro
      AvailabilityZone: !Ref awsRegion
      BlockDeviceMappings:
        - DeviceName: /dev/sda1
          Ebs:
            VolumeType: gp2
            VolumeSize: 30
            DeleteOnTermination: true
            Encrypted: true
  PiholeSecurityGroup:
    Type: 'AWS::EC2::SecurityGroup'
    Properties:
      GroupDescription: pihole DNS server rules
      SecurityGroupIngress:
        - IpProtocol: tcp
          FromPort: 22
          ToPort: 22
          CidrIp: 0.0.0.0/0
        - IpProtocol: tcp
          FromPort: 53
          ToPort: 53
          CidrIp: 0.0.0.0/0
        - IpProtocol: udp
          FromPort: 53
          ToPort: 53
          CidrIp: 0.0.0.0/0
        - IpProtocol: tcp
          FromPort: 80
          ToPort: 80
          CidrIp: 0.0.0.0/0
  PiholeRole:
    Type: AWS::IAM::Role
    Properties:
      Description: Role for the pi-hole
      AssumeRolePolicyDocument:
        Version: "2012-10-17"
        Path: /
        Statement:
          - Effect: Allow
            Principal:
              Service:
                - ec2.amazonaws.com
            Action:
              - 'sts:AssumeRole'
      RoleName: !Join
                  - '-'
                  - - !Ref awsRegion
                    - pihole
